Prevent wrapping of compatibility links

--- a/assets/css/docs.scss
+++ b/assets/css/docs.scss
@@ -284,3 +284,7 @@ a.menu {
 #nothing-found {
 	display: none;
 }
+
+.compat a {
+	text-wrap: nowrap;
+}
